--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="icon" href="./imagen/html.png">
+    <link rel="icon" href="./imagenes/html_logo.png">
 </head>
 <body>
     <header>
