imagen con comandos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p>
                 HTML significa Lenguaje de Marcado de Hipertexto. Es el lenguaje estándar utilizado para crear y diseñar páginas web. HTML estructura el contenido en la web mediante el uso de una serie de elementos y etiquetas para formatear texto, imágenes, enlaces y otros tipos de contenido.
             </p>
-            <img src="imagen/876.webp" alt="imagen de lenguaje HTML" width="600" height="400">
+            <img src="imagenes/html-commands.jpg" alt="imagen de lenguaje HTML" width="600" height="400">
         </section>
 
         <section>
