agrega imagen de python

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>
                 Python es un lenguaje de programación de alto nivel, interpretado y de código abierto, conocido por su sintaxis clara y legible, que se asemeja al lenguaje natural, lo que facilita su aprendizaje y uso.
             </p>
-            <img src="imagen/1234.webp" alt="imagen de lenguaje Python" width="600" height="400">
+            <img src="imagenes/python-logo.png" alt="imagen de lenguaje Python" width="600" height="400">
         </section>
 
         <article>
