hola mundo python

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>3. Código en Python</h2>
             <h3>def hola_mundo():</h3>
             <h3> print("¡Hola, mundo!")</h3>
-            <img src="codigo_python.png" alt="Ejemplo de código en Python" width="600" height="400">
+            <img src="imagenes/hola-mundo.png" alt="Ejemplo de código en Python" width="600" height="400">
         </article>
 
         
