python imagen url

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p>Para crear enlaces a otras páginas se usa la etiqueta <code>&lt;a&gt;</code>:</p>
             <code>&lt;a href="https://developer.mozilla.org/es/docs/Web/HTML"&gt;Visitar Python&lt;/a&gt;</code>
             <a href="https://developer.mozilla.org/es/docs/Web/HTML">
-            <img src="imagen/555.png" alt="Ejemplo de enlaces en HTML" width="600" height="400" >
+            <img src="imagenes/python-url.png" alt="Ejemplo de enlaces en HTML" width="600" height="400" >
             </a>
         </section>
         
