imagen de python

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             
             <!-- Usamos un contenedor flex para la imagen y el texto -->
             <div class="contenido-flex">
-                <img src="imagen/python123.png" alt="Python" width="600" height="400">
+                <img src="imagenes/python-imagen.png" alt="Python" width="600" height="400">
                 <p>Python permite que los desarrolladores sean más productivos, ya que pueden escribir un programa de Python con menos líneas de código en comparación con muchos otros lenguajes. Python cuenta con una gran biblioteca estándar que contiene códigos reutilizables para casi cualquier tarea.</p>
             </div>
         </section>
