actulizacion imagen de python

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <p>Para crear enlaces a otras páginas se usa la etiqueta <code>&lt;a&gt;</code>:</p>
         <code>&lt;a href="https://youtu.be/R0e20f2tny0?si=0IzmAIf2hG91Fx8A"&gt;Visitar Python&lt;/a&gt;</code>
         <a href="https://youtu.be/R0e20f2tny0?si=0IzmAIf2hG91Fx8A">
-        <img src="imagen/756.jpg" alt="Ejemplo de enlaces en Python" width="600" height="400" >
+        <img src="imagenes/Python-logo-notext.svg.png" alt="Ejemplo de enlaces en Python" width="600" height="400" >
         </a>
         
         </aside>
