--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <td>Redondea x al entero más cercano</td>
                 </tr>
             </table>
-            <img src="tablas.png" alt="Ejemplo de tablas en HTML" width="600" height="400">
+            <img src="imagenes/tabla-html.png" alt="Ejemplo de tablas en HTML" width="600" height="400">
         </section>
 
         <section>
