--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <input type="email" id="email" name="email">
                 <button type="submit">Enviar</button>
             </form>
-            <img src="imagen/rene.jpg" alt="Ejemplo de formulario en HTML" width="600" height="400">
+            <img src="imagenes/perritoconterno.jpg" alt="Ejemplo de formulario en HTML" width="600" height="400">
         </section>
 
         <section>
