perrito one piece

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <section>
             <h2>8. Imágenes y Multimedia</h2>
             <p>Se pueden agregar imágenes y videos a las páginas web.</p>
-            <img src="imagen/perrito.png" alt="perrito feliz" width="600" height="400">
+            <img src="imagenes/onepieceperrito.jpg" alt="perrito feliz" width="600" height="400">
             <video controls>
                 <source src="video/pepe.mp4" type="video/mp4">
                 Tu navegador no soporta el elemento de video.
