--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <p>Se pueden agregar imágenes y videos a las páginas web.</p>
             <img src="imagenes/onepieceperrito.jpg" alt="perrito feliz" width="600" height="400">
             <video controls>
-                <source src="video/pepe.mp4" type="video/mp4">
+                <source src="video/PERRIBAILANDO.mp4" type="video/mp4">
                 Tu navegador no soporta el elemento de video.
             </video>
         </section>
